Lab6 fix sonar